--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,4 +1,7 @@
-add_executable(shell-app main.cpp)
+add_executable(shell-app Trial.cpp)
 include_directories(
+	
     ${CMAKE_SOURCE_DIR}/include
 )
+
+
