--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "vendor/boost"]
 	path = vendor/boost
 	url = git@github.com:boostorg/boost.git
+[submodule "gnuplot-cpp"]
+	path = gnuplot-cpp
+	url = https://github.com/gnuplot-cpp
